p3/manifests/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      volumes:
        - name: app-vol
          configMap:
            name: app-configmap
      containers:
        - name: app
          image: richarvey/nginx-php-fpm
          volumeMounts:
            - name: app-vol
              mountPath: /var/www/html
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80 
  type: ClusterIP
